Actions
Bug #13551
closederror: multiply-defined symbols
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol 'language' is multiply-defined: (file errormain.o type=OBJT; file errorinput.o type=OBJT); ld: fatal: symbol 'nerrors' is multiply-defined: (file errormain.o type=OBJT; file errorinput.o type=OBJT); ld: fatal: symbol 'errorfile' is multiply-defined: (file errormain.o type=OBJT; file errorinput.o type=OBJT); ld: fatal: symbol 'touchedfiles' is multiply-defined: (file errormain.o type=OBJT; file errorinput.o type=OBJT); ld: fatal: symbol 'names_ignored' is multiply-defined: (file errormain.o type=OBJT; file errorinput.o type=OBJT); ld: fatal: symbol 'nignored' is multiply-defined: (file errormain.o type=OBJT; file errorinput.o type=OBJT); ld: fatal: symbol 'queryfile' is multiply-defined: (file errormain.o type=OBJT; file errorinput.o type=OBJT); ld: fatal: symbol 'touchedfiles' is multiply-defined: (file errormain.o type=OBJT; file errorpi.o type=OBJT); ld: fatal: symbol 'names_ignored' is multiply-defined: (file errormain.o type=OBJT; file errorpi.o type=OBJT); ld: fatal: symbol 'nignored' is multiply-defined: (file errormain.o type=OBJT; file errorpi.o type=OBJT); ld: fatal: symbol 'queryfile' is multiply-defined: (file errormain.o type=OBJT; file errorpi.o type=OBJT); ld: fatal: symbol 'errorfile' is multiply-defined: (file errormain.o type=OBJT; file errorpi.o type=OBJT); ld: fatal: symbol 'touchedfiles' is multiply-defined: (file errormain.o type=OBJT; file errorsubr.o type=OBJT); ld: fatal: symbol 'names_ignored' is multiply-defined: (file errormain.o type=OBJT; file errorsubr.o type=OBJT); ld: fatal: symbol 'nignored' is multiply-defined: (file errormain.o type=OBJT; file errorsubr.o type=OBJT); ld: fatal: symbol 'queryfile' is multiply-defined: (file errormain.o type=OBJT; file errorsubr.o type=OBJT); ld: fatal: symbol 'errorfile' is multiply-defined: (file errormain.o type=OBJT; file errorsubr.o type=OBJT); ld: fatal: symbol 'nignored' is multiply-defined: (file errormain.o type=OBJT; file errorfilter.o type=OBJT); ld: fatal: symbol 'names_ignored' is multiply-defined: (file errormain.o type=OBJT; file errorfilter.o type=OBJT); ld: fatal: symbol 'touchedfiles' is multiply-defined: (file errormain.o type=OBJT; file errorfilter.o type=OBJT); ld: fatal: symbol 'queryfile' is multiply-defined: (file errormain.o type=OBJT; file errorfilter.o type=OBJT); ld: fatal: symbol 'errorfile' is multiply-defined: (file errormain.o type=OBJT; file errorfilter.o type=OBJT); ld: fatal: symbol 'touchedfiles' is multiply-defined: (file errormain.o type=OBJT; file errortouch.o type=OBJT); ld: fatal: symbol 'queryfile' is multiply-defined: (file errormain.o type=OBJT; file errortouch.o type=OBJT); ld: fatal: symbol 'names_ignored' is multiply-defined: (file errormain.o type=OBJT; file errortouch.o type=OBJT); ld: fatal: symbol 'nignored' is multiply-defined: (file errormain.o type=OBJT; file errortouch.o type=OBJT); ld: fatal: symbol 'errorfile' is multiply-defined: (file errormain.o type=OBJT; file errortouch.o type=OBJT); ld: fatal: file processing errors. No output written to error collect2: error: ld returned 1 exit status
Testing done: build/install/boot
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 28ab0ca48b3e331cbbb231b1c8325f9f24f9af95
commit 28ab0ca48b3e331cbbb231b1c8325f9f24f9af95 Author: Toomas Soome <tsoome@me.com> Date: 2021-03-12T07:23:26.000Z 13551 error: multiply-defined symbols Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions